<resources>
    <string name="app_name">Puzzle</string>
    <string name="facebook_app_id">149580433663857</string>
    <string name="fb_login_protocol_scheme">fb149580433663857</string>
    <string name="members">Members</string>
    <string name="puzzlesDataBase">Puzzle</string>
    <string name="imageStorageDataBase">Images</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_puzzles_screen_tabbed">puzzlesScreenTabbed</string>
    <string name="regularUsers">Regular Users</string>
    <string name="facebookUsers">Facebook Friends</string>
    <string name="title_activity_home_screen_tabbed">HomeScreenTabbed</string>
    <string name="homeTab">HOME</string>
    <string name="scoreBoardTab">SCOREBOARD</string>
    <string name="puzzlesTab">My Puzzles</string>
    <string name="emailEmpty">Email is Required!</string>
    <string name="emailSent">Verification Email Has been Sent.</string>
    <string name="emailError">Email Error found in register </string>
    <string name="passEmpty">Password is Required!</string>
    <string name="passLength">Password Must be 6 Characters or more</string>
    <string name="userCreated">User Created.</string>
    <string name="firstNameKey">First_Name</string>
    <string name="lastNamekey">Last_Name</string>
    <string name="emailKey">Email</string>
    <string name="scoreKey">Score</string>
    <string name="imageUrlKey">imageUrl</string>
    <string name="id">id</string>
    <string name="facebookIDKey">facebookID</string>
    <string name="currentUserID">Uid</string>
    <string name="firstPuzzleText">text</string>
    <string name="secondPuzzleText">text1</string>
    <string name="thirdPuzzleText">text2</string>
    <string name="firstPuzzleAnswer">answer</string>
    <string name="secondPuzzleAnswer">answer1</string>
    <string name="thirdPuzzleAnswer">answer2</string>
    <string name="userLoggedIn">User Logged in Successfully</string>
    <string name="loginFail">Authentication failed.</string>
    <string name="pleaseSignIn">please sign in</string>
    <string name="user_friendsPermission">user_friends</string>
    <string name="emailLoginPermission">"email"</string>
    <string name="imageUploaded">Image Uploaded Successfully</string>
    <string name="somethingFailed">Something failed</string>
    <string name="imageStorageUrl">gs://puzzle-66799.appspot.com/Images</string>
    <string name="image">image</string>
    <string name="jpg">jpg</string>
    <string name="dotJpg">.jpg</string>
    <string name="imageGalleryPermission">image/*</string>
    <string name="changePuzzleNumber">changePuzzleNumber</string>
    <string name="sharedPref">Pref</string>
    <string name="firstPuzzleSubTitle">first puzzle: </string>
    <string name="secondPuzzleSubTitle">second puzzle: </string>
    <string name="thirdPuzzleSubTitle">third puzzle: </string>
    <string name="firstPuzzleAnswerSubTitle">first answer : </string>
    <string name="secondPuzzleAnswerSubTitle">second answer : </string>
    <string name="thirdPuzzleAnswerSubTitle">third answer : </string>
    <string name="noFirstPuzzleFound">No first puzzle</string>
    <string name="noSecondPuzzleFound">No second puzzle</string>
    <string name="noThirdPuzzleFound">No third puzzle</string>
    <string name="noFirstPuzzleAnswer">No first puzzle Answer</string>
    <string name="noSecondPuzzleAnswer">No second puzzle Answer</string>
    <string name="noThirdPuzzleAnswer">No third puzzle Answer</string>
    <string name="puzzleChangedSuccess">Puzzle successfully changed!</string>
    <string name="shardPreferences">Preferences</string>
    <string name="personNotFound">Person not found !</string>
    <string name="shardPreferencesIDkey">ID</string>
    <string name="firstPuzzleSolvedByKey">firstPuzzleSolvedBy</string>
    <string name="secondPuzzleSolvedByKey">secondPuzzleSolvedBy</string>
    <string name="thirdPuzzleSolvedByKey">thirdPuzzleSolvedBy</string>
    <string name="rightAnswer">You got it! you gained </string>
    <string name="wrongAnswer">Wrong answer max points you can get are </string>
    <string name="points">points</string>
    <string name="personName">Person Name</string>
    <string name="personEmail">Person Email</string>
    <string name="logout">Logout</string>
    <string name="openPuzzles">open Puzzles</string>
    <string name="emailNotVerified">Email hasn\'t verify yet!</string>
    <string name="noPuzzle">No Puzzle Found</string>
    <string name="noPuzzleAnswer">No Puzzle Answer</string>
    <string name="changeFirstPuzzle">change first puzzle</string>
    <string name="changeSecondPuzzle">change second puzzle</string>
    <string name="changeThirdPuzzle">change third puzzle</string>
    <string name="submitAnswer">submit answer</string>
    <string name="title_activity__splash">Activity_Splash</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="start">start</string>
    <string name="title_activity_change_puzzle">ActivityChangePuzzle</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_splash">ActivitySplash</string>
    <string name="show_password">Show Password</string>
    <string name="score_0">Score:0</string>
</resources>