<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitySpecificPersonPuzzles">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="7dp"
        android:weightSum="10">

        <TextView
            android:id="@+id/firstPuzzle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/noPuzzle"
            android:textSize="20sp">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/firstPuzzleAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:hint="@string/noFirstPuzzleAnswer"
                android:textSize="13sp" />

            <Button
                android:id="@+id/firstBTNApply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/submitAnswer"
                android:textSize="10sp">

            </Button>

        </LinearLayout>

        <TextView
            android:id="@+id/secondPuzzle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/noPuzzle"
            android:textSize="20sp">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/secondPuzzleAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:hint="@string/noSecondPuzzleAnswer"
                android:textSize="13sp" />

            <Button
                android:id="@+id/secondBTNApply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/submitAnswer"
                android:textSize="10sp">

            </Button>

        </LinearLayout>

        <TextView
            android:id="@+id/thirdPuzzle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/noPuzzle"
            android:textSize="20sp">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/thirdPuzzleAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:hint="@string/noThirdPuzzleAnswer"
                android:textSize="13sp" />

            <Button
                android:id="@+id/thirdBTNApply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/submitAnswer"
                android:textSize="10sp">

            </Button>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>