<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="950dp"
    tools:context=".FragmentMyPuzzles">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/back_home2"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="7dp"
        android:weightSum="5">

        <TextView
            android:id="@+id/myPuzzleLBLPuzzle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/noPuzzle"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_marginTop="100dp"
            android:textStyle="bold">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/myPuzzleLBLAnswer1"
                android:textColor="#60BEE4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/noPuzzleAnswer"
                android:textSize="20sp"
                android:textStyle="bold"
                android:background="@color/black"
                android:alpha="0.8">

            </TextView>

        </LinearLayout>

        <TextView
            android:id="@+id/myPuzzleLBLPuzzle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/noPuzzle"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/myPuzzleLBLAnswer2"
                android:layout_width="match_parent"
                android:textColor="#60BEE4"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/noPuzzleAnswer"
                android:textSize="20sp"
                android:textStyle="bold"
                android:background="@color/black"
                android:alpha="0.8"
                >

            </TextView>

        </LinearLayout>
        <TextView
            android:id="@+id/myPuzzleLBLPuzzle3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/noPuzzle"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/myPuzzleLBLAnswer3"
                android:layout_width="match_parent"
                android:textColor="#60BEE4"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/noPuzzleAnswer"
                android:textSize="20sp"
                android:textStyle="bold"
                android:background="@color/black"
                android:alpha="0.8">



            </TextView>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="7dp"
        android:weightSum="3">


        <Button
            android:id="@+id/myPuzzleLBTNChangeFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/changeFirstPuzzle"
            >


        </Button>
        <Button
            android:id="@+id/myPuzzleLBTNChangeSecond"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/changeSecondPuzzle">

        </Button>
        <Button
            android:id="@+id/myPuzzleLBTNChangeThird"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/changeThirdPuzzle">

        </Button>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>